--- a/A05/style.css
+++ b/A05/style.css
@@ -18,6 +18,7 @@ body, html {
   left: 0;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.7); 
+  z-index: 10;
   padding: 15px 20px;
   display: flex;
   justify-content: center;
